docs/api/qiskit/0.37/qiskit.providers.fake_provider.FakeQasmSimulator.mdx
---
title: FakeQasmSimulator (v0.37)
description: API reference for qiskit.providers.fake_provider.FakeQasmSimulator in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.FakeQasmSimulator
---

# FakeQasmSimulator

<Class id="qiskit.providers.fake_provider.FakeQasmSimulator" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/providers/fake_provider/fake_qasm_simulator.py" signature="FakeQasmSimulator" modifiers="class">
  Bases: `qiskit.providers.fake_provider.fake_backend.FakeBackend`

  A fake simulator backend.

  FakeBackend initializer.

  **Parameters**

  *   **configuration** ([*BackendConfiguration*](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")) – backend configuration
  *   **time\_alive** (*int*) – time to wait before returning result

  ## Methods

  <span id="qiskit-providers-fake-provider-fakeqasmsimulator-configuration" />

  ### configuration

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.configuration" signature="FakeQasmSimulator.configuration()">
    Return the backend configuration.

    **Returns**

    the configuration for the backend.

    **Return type**

    [BackendConfiguration](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")
  </Function>

  <span id="qiskit-providers-fake-provider-fakeqasmsimulator-name" />

  ### name

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.name" signature="FakeQasmSimulator.name()">
    Return the backend name.

    **Returns**

    the name of the backend.

    **Return type**

    str
  </Function>

  <span id="qiskit-providers-fake-provider-fakeqasmsimulator-properties" />

  ### properties

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.properties" signature="FakeQasmSimulator.properties()">
    Return backend properties
  </Function>

  <span id="qiskit-providers-fake-provider-fakeqasmsimulator-provider" />

  ### provider

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.provider" signature="FakeQasmSimulator.provider()">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [Provider](qiskit.providers.Provider "qiskit.providers.Provider")
  </Function>

  <span id="qiskit-providers-fake-provider-fakeqasmsimulator-run" />

  ### run

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.run" signature="FakeQasmSimulator.run(run_input, **kwargs)">
    Main job in simulator
  </Function>

  <span id="qiskit-providers-fake-provider-fakeqasmsimulator-set-options" />

  ### set\_options

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.set_options" signature="FakeQasmSimulator.set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    **AttributeError** – If the field passed in is not part of the options
  </Function>

  <span id="qiskit-providers-fake-provider-fakeqasmsimulator-status" />

  ### status

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.status" signature="FakeQasmSimulator.status()">
    Return the backend status.

    **Returns**

    the status of the backend.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>

  ## Attributes

  ### options

  <Attribute id="qiskit.providers.fake_provider.FakeQasmSimulator.options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](qiskit.providers.fake_provider.FakeQasmSimulator#run "qiskit.providers.fake_provider.FakeQasmSimulator.run") method.
  </Attribute>

  ### version

  <Attribute id="qiskit.providers.fake_provider.FakeQasmSimulator.version" attributeValue="1" />
</Class>

