docs/api/qiskit/0.46/qiskit.providers.fake_provider.FakeQasmSimulator.mdx
---
title: FakeQasmSimulator
description: API reference for qiskit.providers.fake_provider.FakeQasmSimulator
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.fake_provider.FakeQasmSimulator
---

# FakeQasmSimulator

<Class id="qiskit.providers.fake_provider.FakeQasmSimulator" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.46/qiskit/providers/fake_provider/fake_qasm_simulator.py" signature="qiskit.providers.fake_provider.FakeQasmSimulator">
  Bases: [`FakeBackend`](providers_fake_provider#qiskit.providers.fake_provider.FakeBackend "qiskit.providers.fake_provider.fake_backend.FakeBackend")

  A fake simulator backend.

  <Admonition title="Deprecated since version 0.46.0" type="danger">
    The class `qiskit.providers.fake_provider.fake_qasm_simulator.FakeQasmSimulator` is deprecated as of qiskit 0.46.0. It will be removed in qiskit 1.0. Use the qiskit.providers.basic\_provider.BasicSimulator class instead.
  </Admonition>

  ## Attributes

  ### options

  <Attribute id="qiskit.providers.fake_provider.FakeQasmSimulator.options" name="options">
    Return the options for the backend

    The options of a backend are the dynamic parameters defining how the backend is used. These are used to control the [`run()`](#qiskit.providers.fake_provider.FakeQasmSimulator.run "qiskit.providers.fake_provider.FakeQasmSimulator.run") method.
  </Attribute>

  ### version

  <Attribute id="qiskit.providers.fake_provider.FakeQasmSimulator.version" name="version" attributeValue="= 1" />

  ## Methods

  ### configuration

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.configuration" name="configuration" signature="configuration()">
    Return the backend configuration.

    **Returns**

    the configuration for the backend.

    **Return type**

    [BackendConfiguration](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")
  </Function>

  ### name

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.name" name="name" signature="name()">
    Return the backend name.

    **Returns**

    the name of the backend.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.12)")
  </Function>

  ### properties

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.properties" name="properties" signature="properties()">
    Return backend properties
  </Function>

  ### provider

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.provider" name="provider" signature="provider()">
    Return the backend Provider.

    **Returns**

    the Provider responsible for the backend.

    **Return type**

    [Provider](qiskit.providers.Provider "qiskit.providers.Provider")
  </Function>

  ### run

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.run" name="run" signature="run(run_input, **kwargs)">
    Main job in simulator
  </Function>

  ### set\_options

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.set_options" name="set_options" signature="set_options(**fields)">
    Set the options fields for the backend

    This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.

    **Parameters**

    **fields** – The fields to update the options

    **Raises**

    [**AttributeError**](https://docs.python.org/3/library/exceptions.html#AttributeError "(in Python v3.12)") – If the field passed in is not part of the options
  </Function>

  ### status

  <Function id="qiskit.providers.fake_provider.FakeQasmSimulator.status" name="status" signature="status()">
    Return the backend status.

    **Returns**

    the status of the backend.

    **Return type**

    [BackendStatus](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")
  </Function>
</Class>

